[package]
name = "dnsmonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
reqwest = "0.11.22"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
maud = { version = "0.25.0", features = ["axum"] }
